@@ -7,6 +7,7 @@
 - Added information tooltips in switch port view
 - Fixed issues:
 	NX-1494 (Release 2.2.8 failed to compile on macOS)
+	NX-1496 (Add agent parameters System.Memory.Physical.Available and System.Memory.Physical.AvailablePerc on FreeBSD)
 	NX-1501 (In test mode $dci variable is not set)
 	NX-1502 (Configuration poll resets SNMP version on node)
 	NX-1503 (Access denied error on attempt to take screenshot even if user has take screenshot access right)
